Add calculation of chain sizes
Also improve efficiency of calculate_matrix

--- a/distance/CMakeLists.txt
+++ b/distance/CMakeLists.txt
@@ -19,15 +19,16 @@ target_link_libraries(test_distance distance)
 
 add_jar(java_distance ProteinDistance.java ENTRY_POINT ProteinDistance)
 
-
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
 
 add_executable(test_length test_length.cpp)
 target_include_directories(test_length PUBLIC ../gesamt_src)
 target_link_libraries(test_length gesamtlib stdc++fs)
 
-
-
 add_executable(calculate_matrix calculate_matrix.cpp)
 target_include_directories(calculate_matrix PUBLIC ../gesamt_src)
 target_link_libraries(calculate_matrix gesamtlib stdc++fs -static)
+
+add_executable(get_sizes get_sizes.cpp)
+target_include_directories(get_sizes PUBLIC ../gesamt_src)
+target_link_libraries(get_sizes gesamtlib stdc++fs -static)
