[ProteinDistance] Work with binary files to speed up loading

--- a/distance/CMakeLists.txt
+++ b/distance/CMakeLists.txt
@@ -2,8 +2,6 @@ find_package(JNI)
 find_package(Java)
 include(UseJava)
 
-configure_file(config.h.in config.h)
-
 add_executable(sample sample.cpp)
 target_link_libraries(sample gesamtlib stdc++fs -static)
 
@@ -15,6 +13,7 @@ target_include_directories(ProteinDistance PUBLIC ${JNI_INCLUDE_DIRS})
 target_link_libraries(ProteinDistance gesamtlib stdc++fs)
 
 add_jar(java_distance ProteinDistance.java ENTRY_POINT ProteinDistance)
+add_dependencies(java_distance ProteinDistance)
 
 add_executable(calculate_matrix calculate_matrix.cpp)
 target_include_directories(calculate_matrix PUBLIC ../gesamt_src)
@@ -23,3 +22,6 @@ target_link_libraries(calculate_matrix gesamtlib stdc++fs -static)
 add_executable(get_sizes get_sizes.cpp)
 target_include_directories(get_sizes PUBLIC ../gesamt_src)
 target_link_libraries(get_sizes gesamtlib stdc++fs -static)
+
+add_executable(chain2bin chain2bin.cpp)
+target_link_libraries(chain2bin gesamtlib stdc++)
