--- a/distance/CMakeLists.txt
+++ b/distance/CMakeLists.txt
@@ -7,13 +7,10 @@ target_link_libraries(sample gesamtlib stdc++fs -static)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
 
-add_library(ProteinDistance SHARED ProteinDistance.h ProteinDistance.cpp)
+add_library(ProteinDistance SHARED ProteinNativeQScoreDistance.h ProteinNativeQScoreDistance.cpp)
 target_include_directories(ProteinDistance PUBLIC ${PROJECT_BINARY_DIR}/distance)
 target_include_directories(ProteinDistance PUBLIC ${JNI_INCLUDE_DIRS})
 target_link_libraries(ProteinDistance gesamtlib stdc++fs)
-
-add_jar(java_distance ProteinDistance.java ENTRY_POINT ProteinDistance)
-add_dependencies(java_distance ProteinDistance)
 
 add_executable(calculate_matrix calculate_matrix.cpp)
 target_include_directories(calculate_matrix PUBLIC ../gesamt_src)
