Don't use static linking

--- a/distance/CMakeLists.txt
+++ b/distance/CMakeLists.txt
@@ -3,7 +3,7 @@ find_package(Java)
 include(UseJava)
 
 add_executable(sample sample.cpp)
-target_link_libraries(sample gesamtlib stdc++fs -static)
+target_link_libraries(sample gesamtlib stdc++fs)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
 
@@ -14,11 +14,11 @@ target_link_libraries(ProteinDistance gesamtlib stdc++fs)
 
 add_executable(calculate_matrix calculate_matrix.cpp)
 target_include_directories(calculate_matrix PUBLIC ../gesamt_src)
-target_link_libraries(calculate_matrix gesamtlib stdc++fs -static)
+target_link_libraries(calculate_matrix gesamtlib stdc++fs)
 
 add_executable(get_sizes get_sizes.cpp)
 target_include_directories(get_sizes PUBLIC ../gesamt_src)
-target_link_libraries(get_sizes gesamtlib stdc++fs -static)
+target_link_libraries(get_sizes gesamtlib stdc++fs)
 
 add_executable(chain2bin chain2bin.cpp)
 target_link_libraries(chain2bin gesamtlib stdc++)
