--- a/distance/CMakeLists.txt
+++ b/distance/CMakeLists.txt
@@ -24,6 +24,10 @@ target_link_libraries(get_sizes gesamtlib stdc++fs)
 add_executable(chain2bin chain2bin.cpp)
 target_link_libraries(chain2bin gesamtlib stdc++)
 
+add_executable(get_chains get_chains.cpp)
+target_link_libraries(get_chains gesamtlib stdc++)
+install(TARGETS get_chains DESTINATION bin)
+
 add_executable(test_parallel test_parallel.cpp protein_distance.h)
 target_link_libraries(test_parallel ProteinDistance)
 
