Add Python bindings and do some refactoring

--- a/distance/CMakeLists.txt
+++ b/distance/CMakeLists.txt
@@ -1,5 +1,6 @@
 find_package(JNI)
 find_package(Java)
+find_package(pybind11)
 include(UseJava)
 
 add_executable(sample sample.cpp)
@@ -7,10 +8,13 @@ target_link_libraries(sample gesamtlib stdc++fs)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
 
-add_library(ProteinDistance SHARED ProteinNativeQScoreDistance.h ProteinNativeQScoreDistance.cpp config.h protein_distance.cpp protein_distance.h)
+add_library(protein_distance protein_distance.cpp protein_distance.h config.h)
+target_link_libraries(protein_distance gesamtlib stdc++fs)
+
+add_library(ProteinDistance SHARED ProteinNativeQScoreDistance.h ProteinNativeQScoreDistance.cpp protein_distance.h)
 target_include_directories(ProteinDistance PUBLIC ${PROJECT_BINARY_DIR}/distance)
 target_include_directories(ProteinDistance PUBLIC ${JNI_INCLUDE_DIRS})
-target_link_libraries(ProteinDistance gesamtlib stdc++fs)
+target_link_libraries(ProteinDistance protein_distance)
 install(TARGETS ProteinDistance DESTINATION lib)
 
 add_executable(calculate_matrix calculate_matrix.cpp)
@@ -24,10 +28,6 @@ target_link_libraries(get_sizes gesamtlib stdc++fs)
 add_executable(chain2bin chain2bin.cpp)
 target_link_libraries(chain2bin gesamtlib stdc++)
 
-add_executable(get_chains get_chains.cpp)
-target_link_libraries(get_chains gesamtlib stdc++)
-install(TARGETS get_chains DESTINATION bin)
-
 add_executable(test_parallel test_parallel.cpp protein_distance.h)
 target_link_libraries(test_parallel ProteinDistance)
 
@@ -35,3 +35,7 @@ add_jar(java_distance TestJava.java INCLUDE_JARS proteins-1.0.jar ENTRY_POINT Te
 add_dependencies(java_distance ProteinDistance)
 install_jar(java_distance DESTINATION lib)
 install(FILES proteins-1.0.jar DESTINATION lib)
+
+pybind11_add_module(python_distance python_distance.cpp)
+target_link_libraries(python_distance PRIVATE protein_distance)
+install(TARGETS python_distance DESTINATION lib)
