[python_distance] Improve binding and provide test java app

--- a/distance/CMakeLists.txt
+++ b/distance/CMakeLists.txt
@@ -39,6 +39,9 @@ add_dependencies(java_distance ProteinDistance)
 install_jar(java_distance DESTINATION lib)
 install(FILES proteins-1.0.jar DESTINATION lib)
 
+add_jar(get_candidates GetCandidates.java ENTRY_POINT GetCandidates)
+install_jar(get_candidates DESTINATION lib)
+
 pybind11_add_module(python_distance python_distance.cpp)
 target_link_libraries(python_distance PRIVATE protein_distance)
 install(TARGETS python_distance DESTINATION lib)
