[java] Update interface for getStats and remove unused function

--- a/distance/CMakeLists.txt
+++ b/distance/CMakeLists.txt
@@ -14,7 +14,7 @@ target_link_libraries(protein_distance gesamtlib stdc++fs)
 add_library(ProteinDistance SHARED ProteinNativeQScoreDistance.h ProteinNativeQScoreDistance.cpp protein_distance.h)
 target_include_directories(ProteinDistance PUBLIC ${PROJECT_BINARY_DIR}/distance)
 target_include_directories(ProteinDistance PUBLIC ${JNI_INCLUDE_DIRS})
-target_link_libraries(ProteinDistance protein_distance mysqlclient)
+target_link_libraries(ProteinDistance protein_distance)
 install(TARGETS ProteinDistance DESTINATION lib)
 
 add_executable(calculate_matrix calculate_matrix.cpp)
@@ -34,10 +34,10 @@ target_link_libraries(test_parallel ProteinDistance)
 add_executable(create_binary_archive create_binary_archive.cpp common.h)
 target_link_libraries(create_binary_archive gesamtlib)
 
-add_jar(java_distance TestJava.java INCLUDE_JARS proteins-1.0.jar ENTRY_POINT TestJava)
+add_jar(java_distance TestJava.java INCLUDE_JARS proteins-1.1.jar ENTRY_POINT TestJava)
 add_dependencies(java_distance ProteinDistance)
 install_jar(java_distance DESTINATION lib)
-install(FILES proteins-1.0.jar DESTINATION lib)
+install(FILES proteins-1.1.jar DESTINATION lib)
 
 add_jar(get_candidates GetCandidates.java ENTRY_POINT GetCandidates)
 install_jar(get_candidates DESTINATION lib)
