conditional python compiling option to introduce lessen race condition possibility

--- a/distance/CMakeLists.txt
+++ b/distance/CMakeLists.txt
@@ -1,6 +1,5 @@
 find_package(JNI)
 find_package(Java)
-#find_package(pybind11)
 include(UseJava)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
@@ -14,7 +13,14 @@ target_include_directories(ProteinDistance PUBLIC ${JNI_INCLUDE_DIRS})
 target_link_libraries(ProteinDistance protein_distance)
 install(TARGETS ProteinDistance DESTINATION lib)
 
-# todo make it optional, if there is pybind try to compile, or specifiable by flag
-#pybind11_add_module(python_distance python_distance.cpp)
-#target_link_libraries(python_distance PRIVATE protein_distance)
-#install(TARGETS python_distance DESTINATION lib)
+# Check for pybind11
+find_package(pybind11 QUIET)
+
+if(pybind11_FOUND)
+    message(STATUS "Found pybind11, compiling Python bindings.")
+    pybind11_add_module(python_distance python_distance.cpp)
+    target_link_libraries(python_distance PRIVATE protein_distance)
+    install(TARGETS python_distance DESTINATION lib)
+else()
+    message(WARNING "pybind11 not found, skipping Python bindings.")
+endif()
